--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-server": "^20.2.0",
     "@angular/router": "^20.2.0",
     "@angular/ssr": "^20.2.1",
+    "@vercel/analytics": "^1.5.0",
     "express": "^5.1.0",
     "pdfjs-dist": "^5.4.149",
     "rxjs": "~7.8.0",
