--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/router": "^20.2.0",
     "@angular/ssr": "^20.2.1",
     "express": "^5.1.0",
+    "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.149",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
