--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/router": "^20.2.0",
     "@angular/ssr": "^20.2.1",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "express": "^5.1.0",
     "pdfjs-dist": "^5.4.149",
     "rxjs": "~7.8.0",
