--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*",
+                "input": "node_modules/pdfjs-dist/build",
+                "output": "/js/pdfjs/"
               }
             ],
             "styles": [
