--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,7 @@
               {
                 "glob": "**/*",
                 "input": "node_modules/pdfjs-dist/build",
-                "output": "/js/pdfjs/"
+                "output": "/assets/pdfjs/"
               }
             ],
             "styles": [
