--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "npm run i18n:check && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:pdf-annotator": "node dist/pdf-annotator/server/server.mjs"
+    "serve:ssr:pdf-annotator": "node dist/pdf-annotator/server/server.mjs",
+    "i18n:check": "node scripts/check-translations.mjs"
   },
   "prettier": {
     "printWidth": 100,
