Read footer metadata from package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pdf-annotator",
   "version": "0.0.0",
+  "author": "AAmoros",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
