--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-server": "^20.2.0",
     "@angular/router": "^20.2.0",
     "@angular/ssr": "^20.2.1",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@vercel/analytics": "^1.5.0",
     "express": "^5.1.0",
     "pdf-lib": "1.17.1",
