--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,11 +22,11 @@ jobs:
         run: npm install
 
       - name: Build Angular app
-        run: npm run build -- --output-path docs --base-href /pdf-annotator/
+        run: npm run build -- --base-href /pdf-annotator/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
+          publish_dir: ./dist/pdf-annotator
           publish_branch: gh-pages
