Ensure nginx maps mjs to JavaScript

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,7 @@ server {
 
     # Ensure ES module workers (e.g. pdfjs) are served with the proper MIME type
     location ~* \.mjs$ {
+        types { application/javascript mjs; }
         default_type application/javascript;
         try_files $uri =404;
     }
