Download fonts directly from Google Fonts

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "ng test",
     "serve:ssr:pdf-annotator": "node dist/pdf-annotator/server/server.mjs",
     "i18n:check": "node scripts/check-translations.mjs",
-    "fonts:download": "node scripts/download-font-fallbacks.mjs"
+    "fonts:download": "node scripts/download-fonts.mjs"
   },
   "prettier": {
     "printWidth": 100,
