--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "Pdf Annotator",
-  "version": "1.0.1",
+  "version": "1.0.2",
+  "description": "Ejecuta en local con 'npm run start:local' o usa 'npm run start:docker' para servir vía Docker en el puerto 4444 cuando tu entorno no soporte la versión requerida de Node o Angular.",
   "author": "AlvaroMaxter",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:local": "ng serve --host 0.0.0.0 --port 4200",
+    "start:docker": "sh scripts/docker-up.sh",
     "build": "npm run i18n:check && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
