--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     ]
   },
   "private": true,
+  "engines": {
+    "node": "22.12.0"
+  },
   "dependencies": {
     "@angular/common": "^20.2.0",
     "@angular/compiler": "^20.2.0",
