--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "start:local": "node scripts/start-local.mjs",
-    "start:docker": "sh scripts/docker-up.sh",
+    "start:docker": "bash scripts/docker-up.sh",
     "build": "npm run i18n:check && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
