--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           node-version: 22.12.0
           cache: 'npm'
+          cache-dependency-path: package.json
       - name: Install dependencies
         run: npm install --no-audit --no-fund
       - name: Run unit build
@@ -35,6 +36,7 @@ jobs:
         with:
           node-version: 22.12.0
           cache: 'npm'
+          cache-dependency-path: package.json
       - name: Install dependencies
         run: npm install --no-audit --no-fund
       - name: Build application
