--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/ssr": "^20.2.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "@pdf-lib/fontkit": "1.1.1",
     "express": "^5.1.0",
     "pdf-lib": "1.17.1",
     "pdfjs-dist": "5.4.296",
