--- a/angular.json
+++ b/angular.json
@@ -61,6 +61,30 @@
                 "pako"
               ]
             },
+            "pre": {
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "3mb"
+                }
+              ],
+              "allowedCommonJsDependencies": [
+                "pako"
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.pre.ts"
+                }
+              ]
+            },
             "development": {
               "optimization": true,
               "outputHashing": "all",
@@ -77,6 +101,12 @@
               ],
               "allowedCommonJsDependencies": [
                 "pako"
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
               ]
             }
           },
@@ -87,6 +117,9 @@
           "configurations": {
             "production": {
               "buildTarget": "pdf-annotator:build:production"
+            },
+            "pre": {
+              "buildTarget": "pdf-annotator:build:pre"
             },
             "development": {
               "buildTarget": "pdf-annotator:build:development"
