--- a/angular.json
+++ b/angular.json
@@ -59,9 +59,15 @@
               ],
               "allowedCommonJsDependencies": [
                 "pako"
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
               ]
             },
-            "pre": {
+            "test": {
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
@@ -81,7 +87,7 @@
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.pre.ts"
+                  "with": "src/environments/environment.test.ts"
                 }
               ]
             },
@@ -101,12 +107,6 @@
               ],
               "allowedCommonJsDependencies": [
                 "pako"
-              ],
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.development.ts"
-                }
               ]
             }
           },
@@ -118,8 +118,8 @@
             "production": {
               "buildTarget": "pdf-annotator:build:production"
             },
-            "pre": {
-              "buildTarget": "pdf-annotator:build:pre"
+            "test": {
+              "buildTarget": "pdf-annotator:build:test"
             },
             "development": {
               "buildTarget": "pdf-annotator:build:development"
