feat: add offline library and pwa support

--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,8 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+            "serviceWorker": true,
+            "ngswConfigPath": "ngsw-config.json",
             "assets": [
               {
                 "glob": "**/*",
