--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "@angular/compiler": "^20.2.0",
     "@angular/core": "^20.2.0",
     "@angular/forms": "^20.2.0",
+    "@angular/material": "^20.2.1",
     "@angular/platform-browser": "^20.2.0",
+    "@angular/service-worker": "^20.2.1",
     "@angular/platform-server": "^20.2.0",
     "@angular/router": "^20.2.0",
     "@angular/ssr": "^20.2.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "@angular/cdk": "^20.2.1",
     "@pdf-lib/fontkit": "1.1.1",
     "express": "^5.1.0",
     "pdf-lib": "1.17.1",
