--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "dist/pdf-annotator/browser",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
