--- a/angular.json
+++ b/angular.json
@@ -22,14 +22,14 @@
           "builder": "@angular/build:application",
           "options": {
             "outputPath": "dist/pdf-annotator/browser",
+            "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "serviceWorker": true,
-            "ngswConfigPath": "ngsw-config.json",
+            "serviceWorker": "ngsw-config.json",
             "assets": [
               {
                 "glob": "**/*",
